addition of the images into the html file from the images folder in the assets folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h4 class="small-headings">Moringa</h4>
         <h2>Nurturing Africa's Tech Talent</h2>
         <p>Through market-aligned skills training,we help learners buid new career possibilities with greater confidence and capability.</p>
-        <img>
+        <a><img src="./assets/images/image1.png"></a>
         
         <button class="button" type="button" >
             Enroll Now
@@ -26,7 +26,7 @@
         </button>
 
         <p>stories So many memories</p>
-        <img>
+        <a><img src="./assets/images/image 2.png"></a>
         <h4 class="small-headings">Orientation day</h4>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatibus architecto accusantium dolorem, tempore reprehenderit quaerat explicabo exercitationem optio, minima cupiditate est voluptatum similique perferendis repellendus aperiam facere fugiat unde?</P>
         <button class="button">See Album</button>
@@ -34,10 +34,10 @@
         <h4>Board meeting</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi at esse ab repellat harum saepe iste, eius, eligendi ad neque eaque a laboriosam adipisci commodi nulla in. Eum, aliquam minus!</p>
         <button class="button">Read out stories</button>
-        <img>
+        <a><img src="./assets/images/image 3.png"></a>
 
         <p>
-            <img>
+            <a><img src="./assets/images/image 4.png"></a>
             <h4 class="small-headings">Graduation Party</h4>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic qui ea temporibus quam nulla eaque, vitae natus praesentium vero est, consequuntur repellendus distinctio ad iusto odit consequatur, sunt deserunt exercitationem?</p>
             <button class="button">See Album</button>
@@ -46,10 +46,11 @@
         </p>
 
         <p>Technical mentors Skilled, and kind</p>
-        <img>
-        <img>
-        <img>
-        <img>
+        <a><img src="./assets/images/image 5.png"></a>
+        <a><img src="./assets/images/image 6.png"></a>
+        <a><img src="./assets/images/image 7.png"></a>
+        <a><img src="./assets/images/image 8.png"></a>
+        <a><img src="./assets/images/image 9.png"></a>
         <p>Project its hopefully,a good one.</p>
         <P>This is our </P>
         <p>CoolBike website</p>
