adding new classes to make styling easier

--- a/index.html
+++ b/index.html
@@ -64,18 +64,29 @@
         </div>
         <div class="content3">
         <p><h4>Technical mentors </h4>Skilled, and kind</p>
-        <img src="./assets/images/image 5.png"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit debitis, possimus consequatur distinctio accusantium, reprehenderit nemo repudiandae vel modi deleniti natus reiciendis id, voluptas autem illo inventore ipsa. Ipsam, non!</p>
-        <img src="./assets/images/image 6.png"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolore omnis impedit dicta numquam dolorem pariatur libero nulla obcaecati error, voluptas amet est asperiores eius dignissimos nihil perferendis earum distinctio?</p>
-        <img src="./assets/images/image 7.png"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde saepe quia minima hic, perspiciatis nisi est doloremque nesciunt tempore ex? Inventore atque laboriosam sit corrupti corporis non dolore deserunt rerum!</p>
-        <img src="./assets/images/image 8.png"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus qui odio tempora, sit culpa mollitia. Corrupti suscipit, nobis repellat sint illo eum saepe officia. Ad id quae veniam hic accusamus.</p>
-        <img src="./assets/images/image 9.png"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem numquam ea aspernatur voluptate deserunt facilis a quam explicabo ullam autem nesciunt, suscipit fuga incidunt voluptatum sit, blanditiis voluptas dicta ipsa.</p>
+        <img src="./assets/images/image 5.png" alt="Rose oketch" id="Rose">
+        <p><h4>Web Development</h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit debitis, possimus consequatur distinctio accusantium, reprehenderit nemo repudiandae vel modi deleniti natus reiciendis id, voluptas autem illo inventore ipsa. Ipsam, non!</p>
+        <button class="button">Ask A question</button>
+        <img src="./assets/images/image 6.png" alt="Albert" id="Albert">
+        <p><h4>Web Development</h4> ipsum dolor sit amet consectetur adipisicing elit. Quisquam dolore omnis impedit dicta numquam dolorem pariatur libero nulla obcaecati error, voluptas amet est asperiores eius dignissimos nihil perferendis earum distinctio?</p>
+        <button class="button">Ask A question</button>
+        <img src="./assets/images/image 7.png" id="Katana">
+        <p><h4>Web Development</h4> ipsum dolor sit amet consectetur adipisicing elit. Unde saepe quia minima hic, perspiciatis nisi est doloremque nesciunt tempore ex? Inventore atque laboriosam sit corrupti corporis non dolore deserunt rerum!</p>
+        <button class="button">Ask A question</button>
+        <img src="./assets/images/image 8.png" id="Karimi">
+        <p><h4>Web Development</h4>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus qui odio tempora, sit culpa mollitia. Corrupti suscipit, nobis repellat sint illo eum saepe officia. Ad id quae veniam hic accusamus.</p>
+        <button class="button">Ask A question</button>
           </div>
-       <p> <b>Project</b> its hopefully,a good one.</p>
+       
+       <div class="content4">  
+         <p> <b>Project</b> its hopefully,a good one.</p>
         <P>This is our </P>
         <p><h2>CoolBike website</h2></p>
         <p>An application that allows users to showcase bikes for sale and hire whenever they're having team bondingand any hiking activities</p>
-        <img>
+        <img src="./assets/images/image 9.png">
         <button class="button">Learn more</button>
+        </div>
+        
         <p> <h2>Still not sure</h2></p>
         <p> Go ahead and <button class="button">Enroll</button>or contact us</p>
 
