Adding button styles

--- a/index.html
+++ b/index.html
@@ -38,17 +38,14 @@
              buid new career possibilities with greater<br>
              confidence and capability.
           </div>
-         
-          <div><button class="button" type="button" >
+          <div><br><button class="button" type="button" >
             Enroll Now
             </button>
           <button class="button" type="button" >
             Explore
             </button></div>
         </div>
-
         <div class="images"> <img src="./assets/images/image1.png" alt="image1" id="one"></div>
-        
       </div>
         <!--part3-->
           <div class="info">
@@ -57,7 +54,7 @@
             </div>
           </div>
            <div class="content2">
-            <h3>Orientation day</h3><br>
+            <h3>Orientation day</h3>
             <div class="par2">Lorem ipsum dolor sit amet consectetur<br>  adipisicing elit. Quam voluptatibus architecto accusantium dolorem, tempore<br>  reprehenderit quaerat explicabo exercitationem optio, minima cupiditate est voluptatum similique perferendis repellendus aperiam facere fugiat unde?</div><br>
             <button class="button">See Album</button>
           </div >
@@ -79,7 +76,7 @@
             </div>
             <div class="content2">
               <h3>Graduation Party</h3>
-            <div class="par4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic qui ea temporibus quam nulla eaque, vitae natus praesentium vero est, consequuntur repellendus distinctio ad iusto odit consequatur, sunt <br> deserunt exercitationem?</div>
+            <div class="par4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic qui ea temporibus quam nulla eaque, vitae natus praesentium vero est, consequuntur repellendus distinctio ad iusto odit consequatur, sunt <br> deserunt exercitationem?</div><br>
             <button class="button">See Album</button>
             </div>
            </div>
