--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
       </div>
         <!--part3-->
           <div class="info">
-           
           </div>
            <div class="content2">
-            <h3>Orientation day</h3>
-            <button class="button">See Album</button>
+            <h3>Orientation day</h3><br>
             <div class="par2">Lorem ipsum dolor sit amet consectetur<br>  adipisicing elit. Quam voluptatibus architecto accusantium dolorem, tempore<br>  reprehenderit quaerat explicabo exercitationem optio, minima cupiditate est voluptatum similique perferendis repellendus aperiam facere fugiat unde?</div><br>
+            <button class="button">See Album</button>
             <div class="images">
               <img src="./assets/images/image 2.png" alt="image2" id="two">
             </div>
@@ -123,7 +122,7 @@
         <p> <h2>Still not sure</h2></p>
         <p> Go ahead and <button class="button">Enroll</button>or contact us</p>
 
-        <footer>Designed with <img> by JandR </footer>
+        <footer>Designed with love by JandR </footer>
 
 
 
